--- a/kodi-add-ons/index.html
+++ b/kodi-add-ons/index.html
@@ -1,2 +1,15 @@
+Kodi(xbmc) Add-ons Chinese:</br>
 <a href="repository.xbmc-addons-chinese-2.0.1.zip">repository.xbmc-addons-chinese-2.0.1.zip</a><td>192 KB</td></br>
 source from <a href="https://github.com/taxigps/xbmc-addons-chinese">https://github.com/taxigps/xbmc-addons-chinese</a>
+<a href="kodi-add-ons/metadata.tvshows.themoviedb.org.python-1.4.18.zip">kodi-add-ons/metadata.tvshows.themoviedb.org.python-1.4.18.zip</a></br>
+<a href="kodi-add-ons/pvr.hts-8.3.2-android-armv7.zip">kodi-add-ons/pvr.hts-8.3.2-android-armv7.zip</a></br>
+<a href="kodi-add-ons/pvr.hts-8.3.2-android64.zip">kodi-add-ons/pvr.hts-8.3.2-android64.zip</a></br>
+<a href="kodi-add-ons/pvr.hts-8.3.2-osx.zip">kodi-add-ons/pvr.hts-8.3.2-osx.zip</a></br>
+<a href="kodi-add-ons/pvr.hts-8.3.2-windows64.zip">kodi-add-ons/pvr.hts-8.3.2-windows64.zip</a></br>
+<a href="kodi-add-ons/pvr.iptvsimple-7.6.7-android-armv7.zip">kodi-add-ons/pvr.iptvsimple-7.6.7-android-armv7.zip</a></br>
+<a href="kodi-add-ons/pvr.iptvsimple-7.6.7-android64.zip">kodi-add-ons/pvr.iptvsimple-7.6.7-android64.zip</a></br>
+<a href="kodi-add-ons/pvr.iptvsimple-7.6.7-osx.zip">kodi-add-ons/pvr.iptvsimple-7.6.7-osx.zip</a></br>
+<a href="kodi-add-ons/pvr.iptvsimple-7.6.7-windows64.zip">kodi-add-ons/pvr.iptvsimple-7.6.7-windows64.zip</a></br>
+<a href="kodi-add-ons/repository.emby.kodi-1.0.6.zip">kodi-add-ons/repository.emby.kodi-1.0.6.zip</a></br>
+<a href="kodi-add-ons/script.subtitles.zimukux-0.1.9.zip">kodi-add-ons/script.subtitles.zimukux-0.1.9.zip</a></br>
+<a href="kodi-add-ons/service.subtitles.zimuku-2.0.4.zip">kodi-add-ons/service.subtitles.zimuku-2.0.4.zip</a></br>
