--- a/kodi-add-ons/index.html
+++ b/kodi-add-ons/index.html
@@ -1,4 +1,4 @@
-<a href="repository.xbmc-addons-chinese-2.0.1.zip">repository.xbmc-addons-chinese-2.0.1.zip</a><td>192 KB</td></br>
+<a href="repository.xbmc-addons-chinese-2.0.1.zip">repository.xbmc-addons-chinese-2.0.1.zip</a></br>
 <a href="kodi-add-ons/metadata.tvshows.themoviedb.org.python-1.4.18.zip">kodi-add-ons/metadata.tvshows.themoviedb.org.python-1.4.18.zip</a></br>
 <a href="kodi-add-ons/pvr.hts-8.3.2-android-armv7.zip">kodi-add-ons/pvr.hts-8.3.2-android-armv7.zip</a></br>
 <a href="kodi-add-ons/pvr.hts-8.3.2-android64.zip">kodi-add-ons/pvr.hts-8.3.2-android64.zip</a></br>
